[package]
name = "sbrx" 
version = "0.1.95"
edition = "2021"
authors = ["IJB <i4n_1@outlook.com>"]
description = "2D RACING ARENA FIGHTER"
license = "AGPL-3.0-only"

[dependencies] 
piston = "1.0.0"
piston_window = "0.132.0"
rand = "0.9.2" 
image = "0.25.9" 
find_folder = "0.3.0"
rodio = { version = "0.21.1", default-features = false, features = [
    "playback",
    "symphonia-wav",
    "symphonia-pcm",
    "lewton"
] }

firmament_lib = { path = "crates/firmament_lib" }