[package]
name = "firmament_lib"
version = "0.2.0"
edition = "2021"
authors = ["IJB <i4n_1@outlook.com>"]
description = "fighterjet component to sbrx"
license = "AGPL-3.0-only"

[lib]
name = "firmament_lib"
path = "src/lib.rs" 

[dependencies]
piston = "1.0.0"
piston_window = "0.132.0"
rand = "0.9.2" 
image = "0.25.9"
find_folder = "0.3.0"
gl = "0.14.0"
rodio = { version = "0.21.1", default-features = false, features = [
    "playback",
    "symphonia-wav",
    "symphonia-pcm",
    "lewton"
] }